clusters/on-prem/core/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - grafana.binarybraids.com
  rules:
  - host: grafana.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana-service
            port: 
              number: 3000
